# rk3576_linux_rkr5_sdk_cx3576a

./: .gitattributes  .gitignore  README.md  batch_upload.sh
app/ipcweb-backend/: ipcweb-env-rv1126
app/rkpartybox/: CMakeLists.txt
app/rkpartybox/test/testlib/: CMakeLists.txt  testlib.c
app/rkpartybox/test/testlib/include/: testlib.h
buildroot/: Config.in.legacy  Makefile
buildroot/configs/: rockchip_build_autotest_defconfig  rockchip_px30_32_defconfig  rockchip_px30_64_defconfig  rockchip_rk3036_defconfig  rockchip_rk3126c_defconfig  rockchip_rk312x_defconfig  rockchip_rk3288_defconfig  rockchip_rk3308_b_rkpartybox_defconfig  rockchip_rk3308_bs_32_ia_release_defconfig  rockchip_rk3308_bs_32_lvgl_release_defconfig  rockchip_rk3308_bs_lvgl_release_defconfig  rockchip_rk3308_ramboot_defconfig  rockchip_rk3326_32_defconfig  rockchip_rk3326_64_defconfig  rockchip_rk3326_ramboot_defconfig  rockchip_rk3328_32_defconfig  rockchip_rk3328_defconfig  rockchip_rk3358_32_defconfig  rockchip_rk3358_64_defconfig  rockchip_rk3399_defconfig  rockchip_rk3399_ramboot_defconfig  rockchip_rk3399pro-multi-cam_defconfig  rockchip_rk3399pro_combine_defconfig  rockchip_rk3399pro_defconfig  rockchip_rk3506_defconfig  rockchip_rk3506_ramboot_defconfig  rockchip_rk3506_tiny_defconfig  rockchip_rk3528_defconfig  rockchip_rk3562_32_defconfig  rockchip_rk3562_defconfig  rockchip_rk3562_dictpen_defconfig  rockchip_rk3562_ramboot_defconfig  rockchip_rk3566_defconfig  rockchip_rk3566_rk3568_ramboot_defconfig  (+9 more)
debian/: mk-rootfs-bookworm.sh  readme.md
docs/: readme_cn.md  readme_en.md
(+541 files in other folders)
